# OpenGLDemo

./: .gitignore  CMakeLists.txt
glsl/: 3.3.shader.fs  3.3.shader.vs  4.1.texture.fs  4.2.texture.fs  6.1.coordinate_systems.fs  6.2.coordinate_systems.fs  6.3.coordinate_systems.vs  7.1.camera.vs
glsl/basic_lighting/: 2.1.basic_lighting.fs  2.1.basic_lighting.vs  2.1.light_cube.fs
glsl/color/: 1.colors.fs
include/glad/: glad.h
include/glm/: CTestTestfile.cmake
include/stb/: stb_include.h
include/study/: base_draw.h  config.h  draw_color_triangle.h  draw_create_window.h  draw_first_triangle.h  draw_mix_texture.h  draw_perspective_texture.h  draw_rectangle_with_vao.h  draw_rotate_mix_texture.h  draw_texture.h  shader.h
include/study/basic_lighting/: draw_basic_lighting.h  draw_basic_lighting2.h
include/study/camera/: draw_camera_1.h  draw_camera_2.h  draw_camera_3.h
include/study/color/: draw_color.h
include/study/coordinate_systems/: draw_3d_box.h  draw_more_3d_box.h  draw_perspective_texture.h
include/utils/: file_utils.h  texture_utils.h
src/: main.cpp
